BUG-DFC-13909  FaC Location - Collapsing DYM section overlaps the arrow
Updated styles to accommodate both expand and collapse scenario

--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/dfc-app-fac.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/dfc-app-fac.scss
@@ -26,7 +26,7 @@
 .location-suggest, .location-suggest-show {
 	margin-top: 20px;
 
-	.govuk-details[open]>.govuk-details__summary:before {
+	.govuk-details .govuk-details__summary:before {
 		display:none;
 	}
 
